--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.6",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "node-schedule": "^2.1.1",
     "nodemon": "^2.0.22",
     "pocketbase": "^0.14.0"
   }
